# libstr-c

./: .gitignore  CMakeLists.txt  Makefile
src/: intern_str.h  internal_lstr_concat_helpers.c  internal_lstr_match_helpers.c  internal_lstr_split_helpers.c  lstr_append.c  lstr_capitalize.c  lstr_concat.c  lstr_drop_while.c  lstr_ends_with.c  lstr_epur.c  lstr_equals.c  lstr_includes.c  lstr_index_of.c  lstr_match.c  lstr_nb_occur.c  lstr_prepend.c  lstr_replace.c  lstr_reverse.c  lstr_slice.c  lstr_split.c  lstr_starts_with.c  lstr_substr.c  lstr_take_while.c  lstr_test.c  lstr_to_lower_case.c  lstr_to_upper_case.c  lstr_trim.c  str.h
